# Inky

./: .gitignore  README.md  api_handler.py  app.py  display.py  infowindow.py  install.sh  main.py  pyproject.toml  quote_manager.py  test.py  update.sh  utils.py
driver/: epd7in5b_V2.py
frontend/: build.js  index.html  input.css  package-lock.json  package.json
mod_utils/: iw_utils.py
plugins/: system_usage.py
templates/: index.html
