[project]
name = "inky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=8.69.0",
    "adafruit-circuitpython-dht>=4.0.10",
    "arrow>=1.4.0",
    "flask>=3.1.3",
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "ics>=0.7.2",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "rpi-gpio==0.7.0",
    "rpi-lgpio",
    "spidev>=3.8",
    "todoist-python>=8.1.4",
    "gpiozero",
    "zeroconf"
]

[tool.uv.extra-build-dependencies]
gtasks = ["keyring","requests_oauthlib"]
cryptography = ["pkg_resources"]
